--- a/report/src/sections/06-discussion.tex
+++ b/report/src/sections/06-discussion.tex
@@ -75,9 +75,9 @@ We attribute this to the large number of validators that inhabited some of the n
 
 
 \subsubsection{Validator distribution}\label{subsubsec:validator-distribution}
-When we compare the results from the original paper to our results, we see that the distribution of validators on peers is very different.
-In the~\gls{de-anan paper}, the amount of validators on each peer tops out at a little over 1,000 validators per peer.
+When we compare the results from the~\gls{de-anon paper} to our results, we see that the distribution of validators on peers is very different.
+In the~\gls{de-anon paper}, the amount of validators on each peer tops out at a little over 1,000 validators per peer.
 Our finding, however, shows that the number of validators on each peer could reach up to 87,028 validators per peer.
 One explanation could be that the testnet has a higher density of validators than the mainnet because it is easier to become a validator on the testnet as no money is staked.
-In the~\gls{de-anan paper}, they also state that 27\% of the peers they connected to had only one validator.
+In the~\gls{de-anon paper}, they also state that 27\% of the peers they connected to had only one validator.
 Opposite to this, we found that only 7\% of the peers we connected to had just one validator.
