Added implementation code

--- a/report/src/sections/01-introduction.tex
+++ b/report/src/sections/01-introduction.tex
@@ -20,7 +20,7 @@ The information gathered from the attack can then be used to perform attacks, su
 This could lead to a loss of money for the validators, as they are penalized for being inactive.
 A potential monetary gain for the attacker is possible if a victim is the proposer in the slot before the attacker.
 
-In this paper, we have implemented the de-anonymization attack, documented the results, and compared them against
+In this paper, we have implemented the de-anonymization attack\footnote{The implementation can be found at \href{https://github.com/Maltesius/IP9}{github.com/maltesius/ip9}}, documented the results, and compared them against
 the results from the~\gls{de-anon paper}.
 We discuss the incentives and consequences that arise after successfully executing the de-anonymization attack on block proposers.
 Following this, we describe a possible~\gls{dos} attack on block proposers made possible after the de-anonymization validators.
