--- a/report/src/setup/title.tex
+++ b/report/src/setup/title.tex
@@ -1,7 +1,7 @@
 %! Author = Runge
 %! Date = 29-12-2023
 
-\title{Holding Back Validators Through De-Anonymization in Ethereum}
+\title{Denial of Validator Anonymity: A De-Anonymization Attack on Ethereum}
 
 \author{
     Anders Malta Jakobsen\IEEEauthorrefmark{1},
