--- a/report/src/sections/00-abstract.tex
+++ b/report/src/sections/00-abstract.tex
@@ -1,7 +1,7 @@
 
 \begin{abstract}
     Keeping the blockchain secure is a top priority of Ethereum, and it will continue to be because of the large amount of money invested into the network.
-    One of the most central aspects of the network is the validators that are responsible for producing the blocks therein.
+    One of the most central aspects of the network is the validators that are responsible for producing the blocks making up the chain.
     Though, the security and privacy come at risk as Heimbach et al. explore a vulnerability, enabling de-anonymizing validators, and linking IP addresses to them.
     This paper reproduces the de-anonymization on the Ethereum Holesky testnet, verifying the continued existence of the vulnerability.
     The reproduction shows similar results, de-anonymizing close to the same portion of validators found through the experiment.
