--- a/report/src/sections/00-abstract.tex
+++ b/report/src/sections/00-abstract.tex
@@ -1,13 +1,13 @@
 
 \begin{abstract}
-    Keeping the blockchain secure is a top priority of Ethereum, and it will continue to be because of the large amount of money invested into the network.
-    One of the most central aspects of the network is the validators that are responsible for producing the blocks making up the chain.
-    Though, the security and privacy come at risk as Heimbach et al. explore a vulnerability, enabling de-anonymizing validators, and linking IP addresses to them.
+    Ethereum prioritizes keeping the blockchain secure, and this will continue due to the large amount of money invested in the network.
+    One of the network's most central aspects is the validators, who are responsible for producing the blocks that make up the chain.
+    However, security and privacy are at risk as Heimbach et al. explore a vulnerability, enabling de-anonymizing validators and linking IP addresses to them.
     This paper reproduces the de-anonymization on the Ethereum Holesky testnet, verifying the continued existence of the vulnerability.
     The reproduction shows similar results, de-anonymizing close to the same portion of validators found through the experiment.
     Differences from de-anonymization on a testnet contrary to the mainnet are discussed, showing, among other things, that nodes generally run more validators on the testnet.
-    Arising consequences of the validator de-anonymization are also explored, describing a potential Denial-of-Service attack on block proposers.
-    The Denial-of-Service attack allows for an adversary to halt de-anonymized block proposers, resulting in them missing their proposal opportunity and getting penalized for it.
+    The consequences of the validator de-anonymization are also explored, and a potential denial-of-service attack on block proposers is described.
+    The Denial-of-Service attack allows an adversary to halt de-anonymized block proposers, resulting in them missing their proposal opportunity and getting penalized.
 \end{abstract}
 
 \begin{IEEEkeywords}
