--- a/report/src/sections/02-background.tex
+++ b/report/src/sections/02-background.tex
@@ -187,7 +187,7 @@ Also, the chance of getting to propose a block is relatively low.
 
 The average amount of staked ether for a validator is over 32 ETH\@.
 Furthermore, the validator's probability of being a proposer reaches optimality at 32 staked ether.
-Therefore, there is an almost equal chance of being a proposer among the over 1 million validators in Ethereum~\footnote{As of 2024-11-18 seen on~\href{https://beaconcha.in/}{beaconcha.in}}.
+Therefore, there is an almost equal chance of being a proposer among the over 1 million validators in Ethereum\footnote{As of 2024-11-18 seen on~\href{https://beaconcha.in/}{beaconcha.in}}.
 
 \subsubsection{Validator punishments}\label{subsubsec:valpunish}
 A validator can also be punished for doing things that negatively affect the chain.
