--- a/report/src/sections/04-experimental-protocol.tex
+++ b/report/src/sections/04-experimental-protocol.tex
@@ -101,7 +101,7 @@ Having de-anonymized validators means that the~\gls{randao} proposer selection i
 More specifically, performing the Proposer DoS attack as mentioned in~\autoref{subsec:proposer-dos-attack} is possible.
 
 In~\autoref{subsec:randao}, we found that the proposers for an entire epoch are chosen at least one epoch in advance.
-Gathering the proposer duties can be easily obtained, as Ethereum provides an API endpoint for the blockchain, providing information on the chain~\footnote{The API calls are found at \href{https://ethereum.github.io/beacon-APIs/\#/Validator/getProposerDuties}{ethereum.github.io/beacon-APIs}}.
+Gathering the proposer duties can be easily obtained, as Ethereum provides an API endpoint for the blockchain, providing information on the chain\footnote{The API calls are found at \href{https://ethereum.github.io/beacon-APIs/\#/Validator/getProposerDuties}{ethereum.github.io/beacon-APIs}}.
 The adversary would only need an Ethereum node to use this API; a validator is not required.
 Not needing a validator is especially beneficial, as one can perform the attack without staking any money into Ethereum.
 
