--- a/report/src/sections/06-discussion.tex
+++ b/report/src/sections/06-discussion.tex
@@ -76,8 +76,8 @@ We attribute this to the large number of validators that inhabited some of the n
 
 \subsubsection{Validator distribution}\label{subsubsec:validator-distribution}
 When we compare the results from the~\gls{de-anon paper} to our results, we see that the distribution of validators on peers is very different.
-In the~\gls{de-anon paper}, the amount of validators on each peer tops out at 19,000 validators per peer.
-Our finding, however, shows that the number of validators on each peer could reach up to 70,523 validators per peer.
+In the~\gls{de-anon paper}, the amount of validators on a peer tops out at 19,390 validators.
+Our finding, however, shows that the highest number of validators on a peer reached 70,523 validators.
 One explanation could be that the testnet has a higher density of validators than the mainnet because it is easier to become a validator on the testnet as no money is staked.
 In the~\gls{de-anon paper}, they also state that 27\% of the peers they connected to had only one validator.
 Opposite to this, we found that only 7\% of the peers we connected to had just one validator.
